--- a/webview/src/styles/Message.css
+++ b/webview/src/styles/Message.css
@@ -68,6 +68,7 @@
 
 .message-content {
     font-family: var(--vscode-editor-font-family);
+    line-height: 1.4;
 }
 
 /* User message content styling - make pre look like normal text */
